# pdfalyzer

./: .env.example  .flake8  .gitignore  .pdfalyzer.example  CHANGELOG.md  CONTRIBUTING.md  README.md  config  pdfalyzer.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
config/: javascript_reserved_keywords.txt
doc/: new_release_social_media_template.txt
lib/: bytes_decoder.py  chardet_manager.py  config.py  data_stream_handler.py  font_info.py  pdf_parser_manager.py  pdf_walker.py
lib/binary/: bytes_decoder.py  bytes_match.py  data_stream_handler.py  decoding_attempt.py
lib/decorators/: document_model_printer.py  pdf_tree_node.py
lib/detection/: character_encodings.py  chardet_encoding_assessment.py  encoding_assessment.py  encoding_detector.py  javascript_hunter.py  regex_match_metrics.py
lib/detection/constants/: binary_regexes.py  dangerous_instructions.py  javascript_reserved_keywords.py
lib/helpers/: bytes_helper.py  dict_helper.py  file_helper.py  number_helper.py  pdf_object_helper.py  rich_text_helper.py  string_helper.py
lib/output/: decoding_attempts_table.py
lib/util/: adobe_strings.py  argument_parser.py  bytes_helper.py  debugging.py  dict_helper.py  exceptions.py  filesystem_awareness.py  logging.py  pdf_object_helper.py  rich_text_helper.py  string_utils.py
pdfalyzer/: __init__.py  __main__.py  config.py  font_info.py  pdf_object_relationship.py  pdfalyzer.py
pdfalyzer/binary/: binary_scanner.py  bytes_decoder.py  bytes_match.py  decoding_attempt.py
pdfalyzer/decorators/: document_model_printer.py  indeterminate_node.py  pdf_file.py  pdf_object_properties.py  pdf_tree_node.py  pdf_tree_verifier.py
pdfalyzer/decorators/nodes/: object_stream_node.py  stream_node.py
pdfalyzer/detection/: encoding_assessment.py  encoding_detector.py  javascript_hunter.py  regex_match_metrics.py  yara_scanner.py  yaralyzer_helper.py
pdfalyzer/detection/constants/: binary_regexes.py  character_encodings.py  javascript_reserved_keywords.py
pdfalyzer/helpers/: bytes_helper.py  collections_helper.py  dict_helper.py  file_helper.py  filesystem_helper.py  image_helper.py  number_helper.py  pdf_object_helper.py  rich_text_helper.py  string_helper.py
pdfalyzer/output/: character_mapping.py  decoding_attempts_table.py  font_summary_table.py  highlighter.py  json_exporter.py  layout.py  pdf_node_rich_table.py  pdfalyzer_presenter.py  theme.py
pdfalyzer/output/styles/: node_colors.py  rich_theme.py
pdfalyzer/output/tables/: decoding_stats_table.py  font_summary_table.py  metadata_table.py  pdf_node_rich_table.py  stream_objects_table.py
pdfalyzer/util/: adobe_strings.py  argument_parser.py  cli_tools_argument_parser.py  cli_tools_argument_parsers.py  constants.py  debugging.py  exceptions.py  filesystem_awareness.py  logging.py  output_section.py  page_range.py  pdf_ocr_check_manager.py  pdf_parser_manager.py
pdfalyzer/util/cli_tools/: argument_parsers.py
pdfalyzer/util/helpers/: collections_helper.py  filesystem_helper.py  image_helper.py  interaction_helper.py  number_helper.py  pdf_object_helper.py  rich_helper.py  rich_text_helper.py  string_helper.py
pdfalyzer/yara_rules/: PDF.yara  PDF_binary_stream.yara  didier_stevens.yara  lprat.static_file_analysis.yara  pdf_malware.yara
scripts/: count_fonts_in_pypdf_samples.py  delete_pyc_files.sh  find_test_pdf.sh  generate_requirements.txt_from_pyproject.toml.sh  install_didier_stevens_pdf_tools.py  install_didier_stevens_pdf_tools.sh  install_t1utils.sh  poetry_install.sh  publish_to_pypi.sh  rebuild_fixtures.sh  recreate_error_for_pypdf_issue.py  render_help.py  render_help.sh  show_rich_colors.py  slow_tests.py  svg_to_png.sh  test_against_all_pdfs_in_Documents_folder.sh  test_against_all_pdfs_in_folder.sh  test_against_pypdf2_fixture_pdfs.sh  use_local_yaralyzer.sh  use_pypi_yaralyzer.sh  walk_all_fonts.py  walk_pypdf_samples.sh
scripts/lib/: project_paths.sh
tests/: conftest.py  test_combine_pdfs.py  test_extract_pdf_pages.py  test_extract_text_from_pdfs.py  test_file_export.py  test_font_info.py  test_pdfalyze.py  test_pdfalyzer.py
tests/cli_tools/: conftest.py  test_combine_pdfs.py  test_extract_pdf_pages.py  test_extract_text_from_pdfs.py
tests/fixtures/: additional_yara_rules.yara
tests/fixtures/rendered/: SF424_page2.pdf.rich_table_tree.txt  Type1_Acrobat_Font_Explanation.pdf.document_info__scannedby_additional_yara_rules.yara.txt  Type1_Acrobat_Font_Explanation.pdf.document_info__scannedby_additional_yara_rules.yara_customrulesonly.txt  Type1_Acrobat_Font_Explanation.pdf.font_info.txt  Type1_Acrobat_Font_Explanation.pdf.font_info__scannedby_additional_yara_rules.yara.txt  Type1_Acrobat_Font_Explanation.pdf.font_info__scannedby_additional_yara_rules.yara_customrulesonly.txt  Type1_Acrobat_Font_Explanation.pdf.rich_table_tree.txt  Type1_Acrobat_Font_Explanation.pdf.rich_table_tree__scannedby_additional_yara_rules.yara.txt  Type1_Acrobat_Font_Explanation.pdf.rich_table_tree__scannedby_additional_yara_rules.yara_customrulesonly.txt  Type1_Acrobat_Font_Explanation.pdf.streams_analysis_maxdecode256.txt  Type1_Acrobat_Font_Explanation.pdf.streams_analysis_maxdecode256_extractquoteds-backtick,frontslash.txt  Type1_Acrobat_Font_Explanation.pdf.streams_analysis_maxdecode256_extractquoteds-backtick.txt  Type1_Acrobat_Font_Explanation.pdf.streams_analysis_maxdecode256_noBOMs.txt  Type1_Acrobat_Font_Explanation.pdf.streams_analysis_streamid48_maxdecode256.txt  Type1_Acrobat_Font_Explanation.pdf.summary__scannedby_additional_yara_rules.yara.txt  Type1_Acrobat_Font_Explanation.pdf.summary__scannedby_additional_yara_rules.yara_customrulesonly.txt  Type1_Acrobat_Font_Explanation.pdf.tree.txt  analyzing-malicious-document-files.pdf.tree.txt  (+10 more)
tests/lib/: test_chardet_manager.py  test_config.py  test_data_stream_handler.py  test_pdf_parser_manager.py  test_pdf_walker.py
tests/pdfalyzer/: conftest.py  test_config.py  test_font_info.py  test_pdf_object_relationship.py  test_pdf_parser_manager.py  test_pdf_walker.py  test_pdfalyzer.py
yara/: PDF.yara  PDF_binary_stream.yara
(+25 files in other folders)
