[tool.poetry]
name = "pdfalyzer"
version = "1.17.6"
description = "Analyze PDFs with colors (and YARA). Visualize a PDF's inner tree-like data structure, check it against a library of YARA rules, force decodes of suspicious font binaries, and more."
authors = ["Michel de Cryptadamus <michel@cryptadamus.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/michelcrypt4d4mus/pdfalyzer"
homepage = "https://github.com/michelcrypt4d4mus/pdfalyzer"
repository = "https://github.com/michelcrypt4d4mus/pdfalyzer"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Visualization",
]

include = [
    "CHANGELOG.md",
    "LICENSE",
    ".pdfalyzer.example"
]

keywords = [
    "ascii art",
    "binary",
    "color",
    "cybersecurity",
    "DFIR",
    "encoding",
    "font",
    "infosec",
    "maldoc",
    "malicious pdf",
    "malware",
    "malware analysis",
    "pdf",
    "pdfs",
    "pdf analysis",
    "pypdf",
    "threat assessment",
    "threat hunting",
    "threat intelligence",
    "threat research",
    "threatintel",
    "visualization",
    "yara"
]

packages = [
    { include = "pdfalyzer" }
]


#####################
#   Dependencies    #
#####################
[tool.poetry.dependencies]
python = "^3.10"
anytree = "~=2.13"
pypdf = "^6.0.0"
PyMuPDF = {version = "^1.26.4", optional = true}
pytesseract = {version = "^0.3.13", optional = true}
yaralyzer = "^1.0.9"

[tool.poetry.extras]
extract = ["PyMuPDF", "pytesseract"]
# Poetry 2.x handles optional dependencies like this:
# [project.optional-dependencies]
# extract = ["PyMuPDF", "pytesseract"]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^7.1.2"
pytest-skip-slow = "^0.0.3"


#############
#  Scripts  #
#############
[tool.poetry.scripts]
combine_pdfs = 'pdfalyzer:combine_pdfs'
extract_pdf_pages = 'pdfalyzer:extract_pdf_pages'
extract_pdf_text = 'pdfalyzer:extract_pdf_text'
pdfalyze = 'pdfalyzer:pdfalyze'
pdfalyzer_show_color_theme = 'pdfalyzer:pdfalyzer_show_color_theme'


#####################
#     PyPi URLs     #
#####################
[tool.poetry.urls]
Changelog = "https://github.com/michelcrypt4d4mus/pdfalyzer/blob/master/CHANGELOG.md"


###############################
#     Poetry build system     #
###############################
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


##################
#     pytest     #
##################
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
